--- a/NFT.html
+++ b/NFT.html
@@ -96,6 +96,7 @@
         </div>
       </div>
 
- 
+      <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+      <script src="app.js"></script>
 </body>
 </html>
