--- a/Register.html
+++ b/Register.html
@@ -145,6 +145,9 @@
           </div>
         </div>
       </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+    <script src="app.js"></script>
     
 </body>
 </html>
