--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <script src="https://kit.fontawesome.com/77f15cf746.js" crossorigin="anonymous"></script>
 
+  
+
     <link href="/dist/output.css" rel="stylesheet">
 
     
@@ -218,6 +220,8 @@
   <!-- Footer -->
 
     
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+  <script src="app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
