--- a/member.html
+++ b/member.html
@@ -82,5 +82,7 @@
     <small id="help" class="form-text text-muted">Enter the ether amount for your nft</small><br><br>
     <button type="submit" class="btn btn-primary">Submit</button>
   </div><br><br><br>
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
