--- a/sign-in.html
+++ b/sign-in.html
@@ -120,6 +120,9 @@
           <!-- Right -->
         </div>
       </section>
+
+      <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+    <script src="app.js"></script>
     
 </body>
 </html>
